After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 721745 - The positions of the buttons in the headerbar is wrong
The positions of the buttons in the headerbar is wrong
Status: RESOLVED FIXED
Product: bijiben
Classification: Applications
Component: UI
3.11.x
Other Mac OS
: Normal normal
: ---
Assigned To: Bijiben maintainer(s)
Bijiben maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-01-07 22:23 UTC by Yosef Or Boczko
Modified: 2014-01-08 05:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
mainToolbar: Fix item positions (6.43 KB, patch)
2014-01-07 22:24 UTC, Yosef Or Boczko
committed Details | Review

Description Yosef Or Boczko 2014-01-07 22:23:50 UTC
After the following commit in gtk+, the positions of the buttons
in the headerbar is wrong:
https://git.gnome.org/browse/gtk+/commit/?id=c3e91c70317b337c72282a1aad68fc82a82bf9e9
Comment 1 Yosef Or Boczko 2014-01-07 22:24:16 UTC
Created attachment 265605 [details] [review]
mainToolbar: Fix item positions
Comment 2 Pierre-Yves Luyten 2014-01-08 05:31:27 UTC
Comment on attachment 265605 [details] [review]
mainToolbar: Fix item positions

thanks for this quick fix! the patch works as expected, please commit
Comment 3 Yosef Or Boczko 2014-01-08 05:33:05 UTC
Review of attachment 265605 [details] [review]:

Pushed as 665a4413a47e7efb2574cbe886c147f1eb58a5ab - mainToolbar: Fix item positions