mainToolbar: Fix item positions

https://bugzilla.gnome.org/show_bug.cgi?id=721745